--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                 return null;
             }
         }
-        // Reading my code huh? How about this, Context is that this guy prisma ignored me for over 3 months and destroyed my heart. He even ghosted me during a funeral. So yeah, Fuck you Leon
+        // Reading my code huh? 
         async function displayMessage() {
             const countryCode = await getCountryCode();
             const messageElement = document.getElementById('message');
             if (countryCode === 'UA') {
-                messageElement.textContent = 'Oh.. Its you... I dont like you anymore prisma... Leave....';
+                messageElement.textContent = 'Oh.. You look at my website and still ignore me?... a classic leon..';
             } else {
-                messageElement.textContent = 'You are good :3';
+                messageElement.textContent = 'Meow <3';
             }
         }
 
