--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         async function displayMessage() {
             const countryCode = await getCountryCode();
             const messageElement = document.getElementById('message');
-            if (countryCode === 'SW') {
+            if (countryCode === 'SE') {
                 messageElement.textContent = 'Oh.. You look at my website and still ignore me?... a classic leon..';
             } else {
                 messageElement.textContent = 'Meow <3';
