--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hewow</title>
     <style>
-        <h1>
-        You gonna look at my website and not text me dummy?
-        </h1>
-        <h1>
-        You know who you are...
-        </h1>
+<p style="color:black;">Why dont you text me insted?...</p>
+<p style="color:black;">Yes. You....</p>
+
     </style>
 </head>
 </body>
