--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
 <!DOCTYPE html>
-<head>
 <title>Hewow</title>
-<style>
-<p style="color:black;">Why dont you text me insted?...</p>
-<p style="color:black;">Yes. You....</p>
-</style>
-</head>
-</body>
-</html>
+<h> Shit is work in progress okay?! ( im just lazy )</h>
