--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="container">
         <img src="benji.png" alt="Profile Picture" class="profile-pic">
         <div class="social-buttons">
-            <p style="text-align: center;">Meow!!</p>
             <a href="https://steamcommunity.com/id/FireBenny/" class="button">Steam</a>
             <a href="https://discord.gg/29UHEBZs" class="button">Discord</a>
             <a href="https://t.me/FireBenny5457" class="button">Telegram</a>
             <a href="javascript:void(0);" class="button" onclick="document.body.classList.add('spin'); setTimeout(() => document.body.classList.remove('spin'), 2000);">Spiiiinnnn</a>
+            <p style="color:red; text-align: center;">This is a paragraph.</p>
         </div>
     </div>
 </body>
