--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="https://discord.gg/29UHEBZs" class="button">Discord</a>
             <a href="https://t.me/FireBenny5457" class="button">Telegram</a>
             <a href="javascript:void(0);" class="button" onclick="document.body.classList.add('spin'); setTimeout(() => document.body.classList.remove('spin'), 2000);">Spiiiinnnn</a>
-            <p style="color:red; text-align: center;">This is a paragraph.</p>
+            <p style="color:#C8ACD6; text-align: center;">This is a paragraph.</p>
         </div>
     </div>
 </body>
