--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
             <a href="https://discord.gg/29UHEBZs" class="button">Discord</a>
             <a href="https://t.me/FireBenny5457" class="button">Telegram</a>
             <a href="javascript:void(0);" class="button" onclick="document.body.classList.add('spin'); setTimeout(() => document.body.classList.remove('spin'), 2000);">Spiiiinnnn</a>
-            <p style="color:#C8ACD6; text-align: center;">This is a paragraph.</p>
+            <p style="color:#C8ACD6; text-align: center;">Special Thanks to these people <3</p>
+            <p style="color:#C8ACD6; text-align: center;">Faux ;3</p>
+            <p style="color:#C8ACD6; text-align: center;">Azzy</p>
+            <p style="color:#C8ACD6; text-align: center;">Lerpy</p>
+            <p style="color:#C8ACD6; text-align: center;">Belle</p>
+            <p style="color:#C8ACD6; text-align: center;">Lerpy</p>
+            <p style="color:#C8ACD6; text-align: center;">Cayton</p>
+            <p style="color:#C8ACD6; text-align: center;">Sjösvamp</p>
+            <p style="color:#C8ACD6; text-align: center;">Ivy</p>
+            
         </div>
     </div>
 </body>
