--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p style="color:#C8ACD6; text-align: center;">Lerpy</p>
             <p style="color:#C8ACD6; text-align: center;">Belle</p>
             <p style="color:#C8ACD6; text-align: center;">Lerpy</p>
-            <p style="color:#C8ACD6; text-align: center;">Cayton</p>
+            <p style="color:#C8ACD6; text-align: center;">Clayton</p>
             <p style="color:#C8ACD6; text-align: center;">Sjösvamp</p>
             <p style="color:#C8ACD6; text-align: center;">Ivy</p>
             
