--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benji's page!</title>
+    <link rel="icon" href="https://mystickermania.com/cdn/stickers/undertale/sticker_2120-512x512.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <style>
