--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     .spin { animation: spin 2s linear; }
 </style>
 <body>
+     <h1 style="color:#C8ACD6; text-align: center;">Benji's page <3</h1>
     <div class="container">
         <img src="benji.png" alt="Profile Picture" class="profile-pic">
         <div class="social-buttons">
