--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Oh, You are not supposed to be here. Want a advanture? I will give you one;  -->
+<!-- In Pastebin’s vault, a code to use, nQThUREp will guide you through the clues. -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +17,7 @@
 <body>
     <div class="container">
         <img src="benji.png" alt="Profile Picture" class="profile-pic">
-        <h1 style="color:#C8ACD6; text-align: center;">Benji's page <3</h1>
+        <h1 style="color:#C8ACD6; text-align: center;">Benji's page! <3</h1>
         <div class="social-buttons">
             <a href="https://steamcommunity.com/id/FireBenny/" class="button">Steam</a>
             <a href="https://discord.gg/29UHEBZs" class="button">Discord</a>
