--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <p style="color:#C8ACD6; text-align: center;">Clayton</p>
             <p style="color:#C8ACD6; text-align: center;">Sjösvamp</p>
             <p style="color:#C8ACD6; text-align: center;">Ivy</p>
+             <a href="https://boop.benjifemboy.org" class="button">Funny Game</a>
             
         </div>
     </div>
