--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="https://discord.gg/29UHEBZs" class="button">Discord</a>
             <a href="https://t.me/FireBenny5457" class="button">Telegram</a>
             <a href="javascript:void(0);" class="button" onclick="document.body.classList.add('spin'); setTimeout(() => document.body.classList.remove('spin'), 2000);">Spiiiinnnn</a>
+            <p style="color:#C8ACD6; text-align: center;"> Just to put it out there, I can see who visits my website. The traffic is being sent to me.</p> 
             <h1 style="color:#C8ACD6; text-align: center;">Special Thanks to these people <3</h1>
             <p style="color:#C8ACD6; text-align: center;">Faux</p>
             <p style="color:#C8ACD6; text-align: center;">Azzy</p>
