--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <p style="color:#C8ACD6; text-align: center;">Clayton</p>
             <p style="color:#C8ACD6; text-align: center;">Sjösvamp</p>
             <p style="color:#C8ACD6; text-align: center;">Ivy</p>
-             <a href="https://boop.benjifemboy.org" class="button">Funny Game</a>
+            <a href="javascript:void(0);" class="button" onclick="document.body.classList.add('spin'); setTimeout(() => document.body.classList.remove('spin'), 2000);">Spiiiinnnn</a>
+            <a href="https://boop.benjifemboy.org" class="button">Funny Game</a>
+            
             
         </div>
     </div>
