--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
         <img src="benji.png" alt="Profile Picture" class="profile-pic">
         <h1 style="color:#C8ACD6; text-align: center;">Benji's page! <3</h1>
         <div class="social-buttons">
+            <p style="color:#C8ACD6; text-align: center;">My socials!</p>
             <a href="https://steamcommunity.com/id/FireBenny/" class="button">Steam</a>
             <a href="https://discord.gg/29UHEBZs" class="button">Discord</a>
             <a href="https://t.me/FireBenny5457" class="button">Telegram</a>
             <a href="https://x.com/FireBenny5457" class="button">X</a>
             <p style="color:#C8ACD6; text-align: center;">Mail: benji@benjifemboy.org</p>
-            <p style="color:#C8ACD6; text-align: center;"> Just to put it out there, I can see who visits my website. The traffic is being sent to me.</p> 
+            <p style="color:#C8ACD6; text-align: center;">Just to put it out there, I can see who visits my website. The traffic is being sent to me.</p> 
+            <p style="color:#C8ACD6; text-align: center;">Why not send me a message insted? </p>
             <h1 style="color:#C8ACD6; text-align: center;">Special Thanks to these people <3</h1>
             <p style="color:#C8ACD6; text-align: center;">Faux</p>
             <p style="color:#C8ACD6; text-align: center;">Azzy</p>
