--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <a href="https://t.me/FireBenny5457" class="button">Telegram</a>
             <a href="https://x.com/FireBenny5457" class="button">X</a>
             <p style="color:#C8ACD6; text-align: center;">Mail: benji@benjifemboy.org</p>
-            <p style="color:#C8ACD6; text-align: center;">Just to put it out there, I can see who visits my website. The traffic is being sent to me.</p> 
-            <p style="color:#C8ACD6; text-align: center;">Why not send me a message insted? </p>
+            <p style="color:#C8ACD6; text-align: center;">"I’ll Forgive but I’ll Never Forget"</p>
+            <p style="color:#C8ACD6; text-align: center;">- John F. Kennedy</p>
             <h1 style="color:#C8ACD6; text-align: center;">Special Thanks to these people <3</h1>
             <p style="color:#C8ACD6; text-align: center;">Faux</p>
             <p style="color:#C8ACD6; text-align: center;">Azzy</p>
