--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="https://x.com/FireBenny5457" class="button">X</a>
             <p style="color:#C8ACD6; text-align: center;">Mail: benji@benjifemboy.org</p>
             <p style="color:#C8ACD6; text-align: center;">"I’ll Forgive but I’ll Never Forget"</p>
-             <!-- Yeah, I look at YOU. You know who you are. Resident Evil ass protagonist. -->
+             <!-- Yeah, I look at YOU. You know who you are. Resident Evil ass protagonist name. -->
             <p style="color:#C8ACD6; text-align: center;">- John F. Kennedy</p>
             <h1 style="color:#C8ACD6; text-align: center;">Special Thanks to these people <3</h1>
             <p style="color:#C8ACD6; text-align: center;">Faux</p>
