--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <p style="color:#C8ACD6; text-align: center;">Ivy</p>
             <a href="javascript:void(0);" class="button" onclick="document.body.classList.add('spin'); setTimeout(() => document.body.classList.remove('spin'), 2000);">Spiiiinnnn</a>
             <a href="https://boop.benjifemboy.org" class="button">Funny Game</a>
+            <a href="https://life.benjifemboy.org" class="button">Life Updates</a>
             
             
         </div>
