--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 style="color:#C8ACD6; text-align: center;">Benji's page! <3</h1>
         <div class="social-buttons">
             <a href="https://steamcommunity.com/id/FireBenny/" class="button">Steam</a>
-            <a href="https://discord.gg/29UHEBZs" class="button">Discord</a>
+            <a href="https://discord.com/users/704100830478991441" class="button">Discord</a>
             <a href="https://t.me/FireBenny5457" class="button">Telegram</a>
             <a href="https://x.com/FireBenny5457" class="button">X</a>
             <p style="color:#C8ACD6; text-align: center;">Mail: benji@benjifemboy.org</p>
