--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <a href="https://discord.com/users/704100830478991441" class="button">Discord</a>
             <a href="https://t.me/FireBenny5457" class="button">Telegram</a>
             <a href="https://x.com/FireBenny5457" class="button">X</a>
+            <div class="warning-block">
+        <strong>⚠️ This site is under maintenance!</strong><br><br>
+        This site is under maintenance until an empress sails from the southern port and the grand stairs meet the sea. Check back soon!
+    </div>
             <p style="color:#C8ACD6; text-align: center;">Mail: benji@benjifemboy.org</p>
             <p style="color:#C8ACD6; text-align: center;">"I’ll Forgive but I’ll Never Forget"</p>
              <!-- Yeah, I look at YOU. You know who you are. Resident Evil ass protagonist name. -->
