--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://x.com/FireBenny5457" class="button">X</a>
             <div class="warning-block">
         <strong>⚠️ This site is under maintenance!</strong><br><br>
-        This site is under maintenance until an empress sails from the southern port and the grand stairs meet the sea. Check back soon!
+        This site is under maintenance until an Lion sails from the southern port and the grand stairs meet the sea. Check back soon!
     </div>
             <p style="color:#C8ACD6; text-align: center;">Mail: benji@benjifemboy.org</p>
             <p style="color:#C8ACD6; text-align: center;">"I’ll Forgive but I’ll Never Forget"</p>
