--- a/index.html
+++ b/index.html
@@ -1,49 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benji's page!</title>
-    <link rel="icon" href="https://mystickermania.com/cdn/stickers/undertale/sticker_2120-512x512.png">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Benjis site</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background-color: black;
+      color: white;
+      font-family: Arial, sans-serif;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+    .quote-box {
+      max-width: 80%;
+    }
+    .author {
+      margin-top: 20px;
+      font-size: 0.9em;
+      color: #ccc;
+    }
+  </style>
 </head>
-<style>
-    .button { padding: 10px 20px; font-size: 16px; color: white; background: blue; text-decoration: none; border-radius: 5px; }
-    @keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
-    .spin { animation: spin 2s linear; }
-</style>
 <body>
-    <div class="container">
-        <img src="benji.png" alt="Profile Picture" class="profile-pic">
-        <h1 style="color:#C8ACD6; text-align: center;">Benji's page! <3</h1>
-        <div class="social-buttons">
-            <a href="https://steamcommunity.com/id/FireBenny/" class="button">Steam</a>
-            <a href="https://discord.com/users/704100830478991441" class="button">Discord</a>
-            <a href="https://t.me/FireBenny5457" class="button">Telegram</a>
-            <a href="https://x.com/FireBenny5457" class="button">X</a>
-            <div class="warning-block">
-        <strong>⚠️ This site is under maintenance!</strong><br><br>
-        This site is under maintenance until an Lion sails from the southern port and the grand stairs meet the sea. Check back soon!
+  <div class="quote-box">
+    <div class="quote">
+      “Oh… it's you. It's been a long time. How have you been? I've been really busy being dead. You know, after you murdered me.”
     </div>
-            <p style="color:#C8ACD6; text-align: center;">Mail: benji@benjifemboy.org</p>
-            <p style="color:#C8ACD6; text-align: center;">"I’ll Forgive but I’ll Never Forget"</p>
-             <!-- Yeah, I look at YOU. You know who you are. Resident Evil ass protagonist name. -->
-            <p style="color:#C8ACD6; text-align: center;">- John F. Kennedy</p>
-            <h1 style="color:#C8ACD6; text-align: center;">Special Thanks to these people <3</h1>
-            <p style="color:#C8ACD6; text-align: center;">Faux</p>
-            <p style="color:#C8ACD6; text-align: center;">Lerpy</p>
-            <p style="color:#C8ACD6; text-align: center;">Belle</p>
-            <p style="color:#C8ACD6; text-align: center;">Azzy</p>
-            <p style="color:#C8ACD6; text-align: center;">Unti</p>
-            <p style="color:#C8ACD6; text-align: center;">Clayton</p>
-            <p style="color:#C8ACD6; text-align: center;">Sjösvamp</p>
-            <a href="javascript:void(0);" class="button" onclick="document.body.classList.add('spin'); setTimeout(() => document.body.classList.remove('spin'), 2000);">Spiiiinnnn</a>
-            <a href="https://boop.benjifemboy.org" class="button">Funny Game</a>
-
-            <iframe src="https://john.citrons.xyz/embed?ref=https://benjifemboy.org" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;"></iframe>
-            
-            
-        </div>
+    <div class="author">
+      — GLaDOS, *Portal 2* (2011)
     </div>
+  </div>
 </body>
 </html>
