--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
     <div class="quote">
       “Oh… it's you. It's been a long time. How have you been? I've been really busy being dead. You know, after you murdered me.”
     </div>
+    <!-- You know who you are. But I moved on. -->
     <div class="author">
       — GLaDOS, *Portal 2* (2011)
     </div>
   </div>
 </body>
 </html>
+
